tests/assets/test_suites/w3c_wsdl20/documents/good/Interface-3G/Interface.wsdl
<?xml version="1.0" encoding="UTF-8"?>
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/good/Interface-3G/Interface.wsdl -->
<!-- Copyright © 2007-03-23 05:51 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<wsdl:description targetNamespace="http://example.org/"
	xmlns:wsdl="http://www.w3.org/ns/wsdl"
	xmlns:xs="http://www.w3.org/2001/XMLSchema">

	<wsdl:documentation>
		This test shows a valid use of a WSDL 2.0 interface with default
		RPC style.
	</wsdl:documentation>

	<wsdl:interface name="myInterface"
		styleDefault="http://www.w3.org/ns/wsdl/style/rpc">
		<wsdl:documentation>Some documentation</wsdl:documentation>
	</wsdl:interface>
</wsdl:description>
